Added red icon, clouds, and selectCampus
Implemented "You are here" indicator from the front gate. entrance. Adjusted the position and size of clouds. Modified and enhanced the selection of campus.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
