--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cmyk">
   <head>
     <meta charset="utf-8" />
     <title>QC-IOSK</title>
